syntax = "proto3";
option java_package = "cn.starboot.tim.common.packet.proto";
option java_outer_classname="UserPacketProto";
import "TIMEnum.proto";

// IM私有协议包: 用户拉取消息
message UserPacket {
	// 用户名ID
	string userId = 1;
	// 好友消息
	string nick = 2;
	// 用户头像
	string avatar = 3;
	// 用户状态
	TIMEnum.UserStatusType status = 4;
	// 个性签名
	string sign = 5;
	// 所属终端
	TIMEnum.Terminal terminal = 6;
	// 好友列表
	repeated UserPacket friends = 7;
	// 群组列表
	repeated string groupId = 8;
	// 用户昵称拼音
	string pinyin = 9;
	// 拼音首字母
	string firstLetter = 10;
}
